# doclick

./: .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  release-please-config.json  rust-toolchain.toml  settings.html  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  Menu.tsx  Settings.tsx  index.css  main.tsx  settings-main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  diagnostics.rs  events.rs  lib.rs  main.rs  shortcuts.rs  state.rs  travel.rs
src-tauri/src/broadcast/: dispatcher.rs  mod.rs  translate.rs
src-tauri/src/hooks/: keyboard.rs  mod.rs  mouse.rs
src-tauri/src/startup_flow/: accounts.rs  config.rs  ganymede.rs  mod.rs  probe.rs  process.rs
src-tauri/src/windows/: close.rs  enumerate.rs  focus.rs  geometry.rs  mod.rs
src/Settings/: AboutTab.tsx  CharactersTab.tsx  GlobalTab.tsx  HotkeyInput.tsx  ShortcutsTab.tsx  StartupTab.tsx
src/components/: AvatarBar.tsx  BroadcastToggle.tsx  CharacterChip.tsx  CloseButton.tsx  Crown.tsx  ErrorBoundary.tsx  KebabButton.tsx  PanicIndicator.tsx  ResizeHandles.tsx  SelectMainCharacterOverlay.tsx  SettingsButton.tsx  SettingsMenu.tsx  StartupFlowBadge.tsx  TitleBar.tsx  VerticalOverlayChrome.tsx
src/ipc/: commands.ts  events.ts
src/lib/: dofusClass.test.ts  dofusClass.ts  overlaySize.test.ts  (+3 more)
(+15 files in other folders)
