[package]
name = "doclick"
version = "0.2.0" # x-release-please-version
description = "Dofus 3 multi-account team helper overlay"
authors = ["Tolkee"]
edition = "2021"

[lib]
name = "doclick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "fs"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
once_cell = "1"
sysinfo = "0.32"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.windows]
version = "0.61"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_HiDpi",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
]
